Use Collections.emptyList for Java 8 compatibility